--- a/build.gradle
+++ b/build.gradle
@@ -2,26 +2,42 @@ group 'xcscpt'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.0.5'
-
+    ext.kotlin_version = '1.2.10'
+    ext.spring_boot_version = '1.5.4.RELEASE'
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
+//        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+//apply plugin: "kotlin-spring" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
+//apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.5
 
+jar {
+    baseName = 'gs-rest-service'
+    version = '0.1.0'
+}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    compile 'no.tornado:tornadofx:1.7.8'
+
+//    compile 'org.springframework.boot:spring-boot-starter-web'
+//    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
