--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,10 @@ dependencies {
 //    compile 'org.springframework.boot:spring-boot-starter-web'
 //    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
