--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 
     compile 'no.tornado:tornadofx:1.7.8'
 
+    compile 'com.google.code.gson:gson:2.8.2'
+
+
 //    compile 'org.springframework.boot:spring-boot-starter-web'
 //    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
